survey-salesforce/salesforce-app/src/objects/Taro_Inventory_Movement__c.object
<CustomObject>
    <description>Represents the movement of product into, out of, or between inventories.</description>
    <fields>
        <fullName>Adjustment_Qty__c</fullName>
        <description>The quantity of product moving in or out of inventory.</description>
        <label>Adjustment Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Supporting information to reason code.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date inventory movement was created.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Each inventory movement will be linked to specific Inventory Adjustment</description>
        <label>Inventory Adjustment</label>
        <referenceTo>Inventory_Adjustment__c</referenceTo>
        <relationshipLabel>Taro Inventory Movement</relationshipLabel>
        <relationshipName>Taro_Inventory_Movement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <description>The associated inventory the movement is for.</description>
        <label>Inventory</label>
        <referenceTo>Taro_Inventory__c</referenceTo>
        <relationshipLabel>Taro Inventory Movement</relationshipLabel>
        <relationshipName>Taro_Inventory_Movement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>Reason adjustment was made.</description>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Product Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantities</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The source of the initiation of the inventory movement.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Movements</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taro_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated order line item, if applicable.</description>
        <label>Taro Order Line Item</label>
        <referenceTo>Taro_Order_Line_item__c</referenceTo>
        <relationshipLabel>Taro Inventory Movement</relationshipLabel>
        <relationshipName>Taro_Inventory_Movement</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Taro Inventory Movement</label>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>Taro Inventory Movement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taro Inventory Movement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>